objects/ConfigIt_Supercode__c.object
<CustomObject>
    <description>EP R2 Object to store ConfigIt Product hierarchy</description>
    <fields>
        <fullName>Cart_Id__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>ConfigIt Supercodes</relationshipLabel>
        <relationshipName>ConfigIt_Supercodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Configurator_Cart_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurator Cart Summary</label>
        <referenceTo>APTS_Configurator_Cart_Summary__c</referenceTo>
        <relationshipLabel>ConfigIt Supercodes</relationshipLabel>
        <relationshipName>ConfigIt_Supercodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supercode__c</fullName>
        <label>Supercode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net_Price__c</fullName>
        <label>Total Net Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ConfigIt Supercode</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUP-{000000}</displayFormat>
        <label>ConfigIt Supercode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConfigIt Supercodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>